# my-py-scripts

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: ADSBexchange.py
tests/: test_ADSBexchange.py
